--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
     <!-- Add permissions for Camera -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -21,8 +20,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FirstActivity"
         tools:targetApi="31">
-
-
+        <activity
+            android:name=".ShapeAnimationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ShapesAnimationView"
+            android:exported="false" />
         <activity
             android:name=".GlassesRecommendationActivity"
             android:exported="false" />
